--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #191d2b;
-  height: 200vh;
+  min-height: 100vh;
   position: relative;}
   body:before {
     content: "";
@@ -25,12 +25,11 @@ body {
 /* custom css */
 #logo {
       display: inline-block;
-      margin: 5px; /* margin: 20px was off */
-      height: 60px;
+      /* margin: 5px; margin: 20px was off */
+      height: 35px;
       width: auto; /* correct proportions to specified height */
-      border-radius: 50%; /* makes it a circle */
-      color: white;
-      font-weight: bolder;}
+      border-radius: 0%; /* makes it a circle */
+      color: white;}
 
 p {
   color: #ffffff;
@@ -59,11 +58,13 @@ p {
   color: #727272;
 }
 
-.blog-footer {
+footer {
   padding: 20px 0;
   border-top: .05rem solid grey;
-
-}
+  /* position: fixed; */
+  bottom: 0;
+  width: 100%;
+  height: 50px; }
 
 .col5{color:#CCCCCC;
   background-color:#000000; 
@@ -106,6 +107,33 @@ header{
   background-color: transparent;
 
 }
+
+.card-text{
+  color: white;
+  font-size: large;
+}
+
+.sidebar-widget{
+  color: white;
+}
+
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
+
 
 
 /* custom css ends here. */
